Fix sidebar cutoff issue by adding extra bottom padding

--- a/assets/css/collapse.css
+++ b/assets/css/collapse.css
@@ -6,7 +6,7 @@
     width:100%;
 }
 .container .header {
-    background-color:#d3d3d3;
+    background-color:#663399;
     padding: 2px;
     cursor: pointer;
     font-weight: bold;
